<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classroom Clicker</string>
    <string name="enter_url_text">Enter URL</string>
    <string name="url_hint">e.g. http://flamingwookiee.me</string>
    <string name="send_button_text">Send</string>
    <string name="change_info_button_text">Change Info</string>
    <string name="info_entry_title">Student Information</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="username_field_text">Username:</string>
    <string name="id_field_text">ID Number:</string>
    <string name="pin_field_text">Pin Number:</string>
    <string name="info_saved_toast">Info Saved</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="connect">Connect</string>
    <string name="take_quiz_label">Start Quiz</string>
    <string name="classes_title">Classes</string>
    <string name="welcome_banner">Classroom Clicker</string>
    <string name="class_hash_hint">Enter code here...</string>
    <string name="username_field_hint">Enter email here...</string>
    <string name="roll_call_header">Are you here?</string>
    <string name="roll_call_button">Yes, I am here</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">drawer open</string>
    <string name="close">drawer closed</string>

</resources>
