<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".QuizFinderActivity$PlaceholderFragment">

    <TextView
        android:text="@string/enter_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>

    <EditText
        android:id="@+id/url"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:hint="@string/url_hint"/>

    <Button
        android:id="@+id/send_url_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/send_button_text"/>
    <Button
        android:id="@+id/change_info_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:text="@string/change_info_button_text"/>

</LinearLayout>
