<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="center_horizontal" >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/id_field_text"/>

        <EditText android:id="@+id/id_number"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginLeft="24dp"
                  android:layout_marginRight="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/username_field_text"/>

        <EditText android:id="@+id/username"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginLeft="24dp"
                  android:layout_marginRight="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/pin_field_text"/>

        <EditText android:id="@+id/pin_number"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent"
                  android:layout_marginLeft="24dp"
                  android:layout_marginRight="24dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/save_info_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="Save"/>

</LinearLayout>